--- a/index.html
+++ b/index.html
@@ -18,4 +18,7 @@
 		    This is my cat
 	    </footer>
 	</body>
+	<video width="500px" height="500px" controls="controls">
+        <source src="pet_gif.mp4" type="video/mp4" />>
+	</video>
 </html>
