--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 	    </footer>
 	</body>
 	<video width="300px" height="300px" controls="controls">
-        <source src="pet_gif.mp4" type="video/mp4" />>
+        <source src="pet_gif" type="gif" />>
 	</video>
 </html>
