--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		    This is my cat
 	    </footer>
 	</body>
-	<image width="300px" height="300px" controls="controls">
+	<video width="300px" height="300px" controls="controls">
         <source src="pet_gif" type="gif" />>
-	</image>
+	</video>
 </html>
